--- a/style.css
+++ b/style.css
@@ -1,5 +1,63 @@
+body {
+    font-family: "Roboto", serif;
+    margin: 0;
+}
+
+.container {
+    max-width: 1200px;
+    margin: auto;
+}
+
+h1, .header {
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: 700;
+}
+
+.nav-bar {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+}
+
+.nav-bar a {
+    text-decoration: none;
+    padding: 12px;
+}
+
+.hero {
+    background-color: #1F2937;
+}
+
 h1 {
     font-size: 48px;
     font-weight: 900;
-    color: #F9FAF8;
 }
+
+.nav-links a, .secondary {
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero-content {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+}
+
+.img-place {
+    background-color: rgb(136, 135, 135);
+    width: auto;
+    height: 250px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.left-hero, .right-hero {
+    flex: 1;
+    margin: 44px 0px;
+    padding: 20px 0px;
+}
+
