--- a/style.css
+++ b/style.css
@@ -144,3 +144,10 @@ h1 {
     color:white;
     font-size: 14px;
 }
+
+.footer {
+    background-color: #1F2937;
+    padding: 40px;
+    color: #fff;
+    text-align: center;
+}
