--- a/style.css
+++ b/style.css
@@ -32,11 +32,13 @@ h1, .header {
 h1 {
     font-size: 48px;
     font-weight: 900;
+    margin: 0;
 }
 
 .nav-links a, .secondary {
     font-size: 18px;
     color: #E5E7EB;
+    margin: 0;
 }
 
 .hero-content {
@@ -61,6 +63,17 @@ h1 {
     padding: 20px 0px;
 }
 
+.left-hero button {
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: none;
+    background-color: #3882F6;
+    color: #F9FAF8;
+    font-size: 14px;
+    margin-top: 8px;
+    font-weight: 800;
+}
+
 .info {
     text-align: center;
     margin-top: 44px;
@@ -69,10 +82,20 @@ h1 {
 
 .card-section {
     display: flex;
-    justify-content: center;
-    width: 1000px;
     margin: auto;
+    justify-content: center;
     margin-top: 40px;
+}
+
+.card {
+    width: 150px;
+}
+
+.card p {
+    color: #6e6f70;
+    width: 100px;
+    margin: auto;
+    margin-top: 6px;
 }
 
 .card-image {
@@ -122,7 +145,7 @@ h1 {
 }
 
 .cta-content {
-    color: #fff;
+    color: #F9FAF8;
 }
 
 .cta-content p {
@@ -140,14 +163,14 @@ h1 {
     padding: 8px 16px;
     border-radius: 4px;
     background-color: transparent;
-    border: 2px solid #fff;
-    color:white;
+    border: 2px solid #F9FAF8;
+    color: #F9FAF8;
     font-size: 14px;
 }
 
 .footer {
     background-color: #1F2937;
     padding: 40px;
-    color: #fff;
+    color: #F9FAF8;
     text-align: center;
 }
